app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Address</fullName>
    </fields>
    <fields>
        <fullName>AnnualRevenue</fullName>
    </fields>
    <fields>
        <fullName>Business_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company</fullName>
    </fields>
    <fields>
        <fullName>Description</fullName>
    </fields>
    <fields>
        <fullName>DoNotCall</fullName>
    </fields>
    <fields>
        <fullName>Email</fullName>
    </fields>
    <fields>
        <fullName>Fax</fullName>
    </fields>
    <fields>
        <fullName>HasOptedOutOfEmail</fullName>
    </fields>
    <fields>
        <fullName>HasOptedOutOfFax</fullName>
    </fields>
    <fields>
        <fullName>IndividualId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Jigsaw</fullName>
    </fields>
    <fields>
        <fullName>LastTransferDate</fullName>
    </fields>
    <fields>
        <fullName>LeadSource</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MobilePhone</fullName>
    </fields>
    <fields>
        <fullName>Name</fullName>
    </fields>
    <fields>
        <fullName>NumberOfEmployees</fullName>
    </fields>
    <fields>
        <fullName>OwnerId</fullName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone</fullName>
    </fields>
    <fields>
        <fullName>Rating</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status</fullName>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title</fullName>
    </fields>
    <fields>
        <fullName>WP_User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WP User Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WP User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website</fullName>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Type__c</fullName>
        <description>The Edition of this org. UE, EE, PE, TE, Free</description>
        <label>Subscriber Org Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>dhall</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>ahuja</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>JW</value>
        </filters>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Dude</value>
        </filters>
        <label>Adhoc</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>