app/main/default/objects/Lead/fields/Business_Email__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Business_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Email</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>