app/main/default/objects/Lead/fields/WP_User__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>WP_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WP User</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>