app/main/default/objects/Lead/fields/WP_User_Created__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>WP_User_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WP User Created</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>